# slack-notifier

./: slack-notifier.cabal  stack.yaml
app/: Main.hs  SendMessage.hs
