name:                slack-notifier
version:             0.1.0.0
synopsis:            slack activity notifications over XMPP when XMPP support is disabled
description:         slack activity notifications over XMPP when XMPP support is disabled
homepage:            http://github.com/michaxm/slack-notifier#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Mannhardt
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable slack-notifier
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , network-protocol-xmpp
                     , text
                     , xml-types
                     , network
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaxm/slack-notifier
